# LOFindAndReplaceDesign

./: .buildconfig  .gitignore  meson.build  org.gnome.Lofindandreplacedesign.json
data/: fnr_window.ui  fnr_window.ui~  formatting_popup.ui  main_window.ui  meson.build  org.gnome.Lofindandreplacedesign.appdata.xml.in  org.gnome.Lofindandreplacedesign.desktop.in  org.gnome.Lofindandreplacedesign.gresource.xml  org.gnome.Lofindandreplacedesign.gschema.xml  style.css
po/: POTFILES  meson.build
src/: fnr_window.py  gi_composites.py  lofindandreplacedesign.gresource.xml  lofindandreplacedesign.in  main.py  main_window.py  meson.build  tags.0tzEJV  tags.27XQva  tags.3GWjky  tags.3PnXpb  tags.3alzei  tags.3wsHY7  tags.4mKrIS  tags.5ukfzp  tags.5y9WV8  tags.6crtqb  tags.Amr1pl  tags.AsfH8M  tags.BeOoJn  tags.CcZlGM  tags.GIAKD6  tags.HYR5jX  tags.LXJPvV  tags.QShsXN  tags.RZMpYk  tags.RtuHQZ  tags.S4Hmvg  tags.SWCBQf  tags.bBqrpr  tags.cWSiwx  tags.ebwyrZ  tags.gxqIF4  tags.iiAliO  tags.jFBCdS  tags.jNRrdk  tags.jxT0fS  tags.k9deVX  tags.kPZURl  tags.lLJCA8  (+10 more)
subprojects/: libgd.wrap
